--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Gem!</title>
+
 </head>
 
 <body>
@@ -33,13 +34,133 @@
                     The value of each crytal will change every time the game restarts.
                 </p>
             </div>
+            <div id="row three">
+                <div id="col-sm-12">
+                    <img src="assets/images/diamond.png" class="click" id="white" width="100px" height="100px">
+                    <img src="assets/images/emerald.png" class="click" id="green" width="100px" height="100px">
+                    <img src="assets/images/rose.jpg" class="click" id="pink" width="100px" height="100px">
+                    <img src="assets/images/ruby.jpg" class="click" id="red" width="100px" height="100px">
+                </div>
+            </div>
+            <div id="row four">
+                <div id="col-lg-4">
+                    <div id="rNumber">
+                        <H2>Random Number</H2>
+                    </div>
+                </div>
+                <div id="col-lg-4">
+                    <div id="results">
+                        <p>
+                            Wins: <div id="wins"></div>
+                            Losses: <div id="lose"></div>
+                        </p>
 
+                    </div>
+                </div>
+                <div id="col-lg-4">
+                    <div id="score">
+                        <p>
+                            score:<div id="score"></div>
+                        </p>
+                    </div>
+
+                </div>
+
+
+
+            </div>
+
+            <script src="assets/javascript/game.js"></script>
 
         </div>
 
+        <script>
+
+            var rNumber = Math.floor((Math.random() * 100) + 20)
+            console.log(rNumber)
+
+            var wins = 0;
+            var lose = 0;
+            var score = 0;
+
+            var white = Math.floor((Math.random() * 12) + 1);
+            var green = Math.floor((Math.random() * 12) + 1);
+            var pink = Math.floor((Math.random() * 12) + 1);
+            var red = Math.floor((Math.random() * 12) + 1);
+            console.log(white)
+
+            var refreshedScore = function () {
+                $("#wins").empty();
+                $("#lose").empty();
+                $("#score").empty();
+
+                S("#wins").append(wins);
+                $("#lose").append(lose);
+                $("#score").append(score);
+            }
+
+            var gameReSet = function () {
+                score = 0
+                number = Math.floor((Math.random() * 100) + 20);
+                var white = Math.floor((Math.random() * 12) + 1);
+                var green = Math.floor((Math.random() * 12) + 1);
+                var pink = Math.floor((Math.random() * 12) + 1);
+                var red = Math.floor((Math.random() * 12) + 1);
+                refreshedScore();
+            }
+
+            var codeForTheGameToWork = function () {
+                if (score == rNumber) {
+                    wins = wins + 1;
+                    alert("aye would you look at that you lost, jk you get a point!")
+                    gameReSet();
+                }
+                else if (score > rNumber) {
+                    lose = lose + 1;
+                    alert("If you look to your left you will notice, that there is nothing there...aha like the zero points you just earned!")
+                    gameReSet();
+                }
+                else {
+                    refreshedScore();
+                }
+            }
+
+            $("#rNumber").append(rNumber);
+            $("#score").append(score);
+
+            //$("#white").on("click", function ()
+            $('#white').click(function () {
+                score = score + white;
+                codeForTheGameToWork();
+            })
+            $("#green").click(function () {
+                score = score + green;
+                codeForTheGameToWork();
+            })
+            $("#pink").click(function () {
+                score = score + pink;
+                codeForTheGameToWork();
+            })
+            $("#red").click(function () {
+                score = score + red;
+                codeForTheGameToWork();
+            })
+            console.log(white)
 
 
-    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+        </script>
 
 </body>
 
